--- a/index.html
+++ b/index.html
@@ -2,82 +2,90 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-      <!-- CSS & JS -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="css/reset.css">
-      <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <meta charset="UTF-8">
+    <title>Stock Search App</title>
 
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 
-      </script>
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-     <link rel="stylesheet" href="style.css">
-  <title>Stock Ticker Search</title>
-  
-</head>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        vidContent = document.getElementById('vidcontent');
+        vidContent.addEventListener("loadedmetadata", function (e) {
+            var newHeight = (vidContent.width / this.videoWidth) * this.videoHeight;
+            vidContent.style.height = parseInt(Math.ceil(newHeight)) + "px";
+        }, false);
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+   </head>
 
 <body>
-<header>
-  <nav style="jumbotron">
-</nav>
-</header>
 
- 
 
-  <form id="stock-form" > 
-    <label for="stock-input">
-      Add a Stock Symbol!</label>
+    <div class="jumbotron">
+        <h1 class="text-center">
+            <strong>
+                Stock Search App</strong>
+            <br>
+            <div class="text-center form-group p-3 " id="stock-form">
+                <input type="text" class="form-control w-50" id="symbol-input" placeholder="Enter Stock Symbol to Add">
+                <small><a href="https://api.iextrading.com/1.0/ref-data/symbols" class="card-link" target="_blank">Company
+                        Stock Symbol Reference</a></small><br>
 
-    <button id="rcorners1">
-    <input type="text" id="stock-input"><br>
-    <input id="add-stock" type="submit" value="Submit"></button>
-  </form>
+                <!-- search for user input stock  -->
+                <button type="submit" class="btn btn-default" id="add-stock">
+                    Add Stock Symbol</button>
 
-  <div id="stocks">
+                <button class="btn btn-default" id="clear-all">
+                    <i class="fa fa-trash"></i> Clear Search</button>
+        </h1>
+    </div>
 
-  </div>
-  <div id="stock-buttons">
-      <div id="stock-news">
-      <div class="row">
-          <div class="column1">
-            <div class="card">..</div>
-          </div>
-          <div class="column2">
-            <div class="card">..</div>
-          </div>
-          <div class="column3">
-            <div class="card">..</div>
-          </div>
-          <div class="column4">
-            <div class="card">..</div>
-          </div>
+    <div class="container">
+        <!-- Row for Displaying each Company Stock Information -->
+        <div class="row">
+            <div class="col-2 p-3 m-3">
+                <div id="stocks-btn-list"></div>
+            </div>
+
+            <div class="col-9">
+                <br>
+                <div class="card">
+                    <div class="card-header">
+                        <strong id="company-name">
+                            <i class="fa fa-list-alt"> </i></strong>
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <div class="jumbotron">
+                        <div id="stocks-info">Company Stock Info & Articles</div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
- 
 
-      
-
-    
-      <footer class="page-footer grey">
-          <div class="w3-center">
-              <div class="center">
-     2018 Cynthia Knox GitHub
-              </div></div>
-        </footer>
-  </div>
- 
-
-  
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="app.js"></script>
- 
+    <div id="footer" class="navbar justify-content-center fixed-bottom col-12 ">
+        <strong>ATL Executive Media: Cynthia Knox 2018 &copy;</strong>
+    </div>
 
 
+    </div>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
 
 </body>
+
 </html>
+
+
